--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 拾陆
-description: Keep
+title: Long Haul
+description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
 url: http://brianmaierjr.github.com/long-haul
 baseurl: ""
@@ -19,13 +19,9 @@ navigation:
    url: /contact
 
 social:
-   github: jsonzhang
-   twitter: jsonzhang
-   facebook: jsonzhang
-   email: jsonzhang@icloud.com
+   github: brianmaierjr
+   twitter: brianmaierjr
+   facebook: brianmaierjr
+   email: brimaidesigns@gmail.com
 
 google_analytics: "UA-58263416-1"
-
-
-# Build settings
-markdown: kramdown
