--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: 拾陆
+description: keep
 
-url: http://brianmaierjr.github.com/long-haul
+url: http://jsonzhang.github.io
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -19,9 +19,9 @@ navigation:
    url: /contact
 
 social:
-   github: brianmaierjr
-   twitter: brianmaierjr
-   facebook: brianmaierjr
-   email: brimaidesigns@gmail.com
+   github: jsonzhang
+   twitter: jsonzhang
+   facebook: jsonzhang
+   email: jsonzhang@icloud.com
 
 google_analytics: "UA-58263416-1"
