增加了gulp流程,compass编译,修改了模板,修改了文章

--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,6 @@ social:
    email: jsonzhang@icloud.com
 
 google_analytics: "UA-58263416-1"
+
+
+exclude: ["node_modules", "gulpfile.js", "package.json","assets/scss"]
