--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ paginate: 5
 navigation:
  - title: Home
    url: /index.html
- - title: About
-   url: /about
+ # - title: About
+   # url: /about
 
 social:
    github: jsonzhang
