--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
+imgArray: ["1.jpg"]
+
 markdown: redcarpet
 highlighter: pygments
 paginate: 5
