--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,14 @@ url: http://jsonzhang.github.io
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
-
+google_analytics: "false"
 imgArray: ["1.jpg"]
 
 markdown: redcarpet
 highlighter: pygments
 paginate: 5
+
+gems: ["jekyll-paginate"]
 
 navigation:
  # - title: Home
