--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "browser-sync": "^1.3.7",
+    "browser-sync": "^2.10.1",
+    "compass": "^0.1.1",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "1.0.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-compass": "^2.1.0",
-    "gulp-sass": "^2.0.4"
+    "gulp-sass": "^2.1.1"
   }
 }
